@@ -12,7 +12,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: cons_sos2.c,v 1.43.2.2 2011/01/02 11:19:46 bzfheinz Exp $"
+#pragma ident "@(#) $Id: cons_sos2.c,v 1.43.2.3 2011/01/18 18:38:26 bzfberth Exp $"
 
 /**@file   cons_sos2.c
  * @ingroup CONSHDLRS
@@ -839,7 +839,7 @@ SCIP_RETCODE enforceSOS2(
    objest = 0.0;
    for (j = 0; j < maxInd; ++j)
    {
-      nodeselest += SCIPcalcNodeselPriority(scip, Vars[j], 0.0);
+      nodeselest += SCIPcalcNodeselPriority(scip, Vars[j], SCIP_BRANCHDIR_DOWNWARDS, 0.0);
       objest += SCIPcalcChildEstimate(scip, Vars[j], 0.0);
    }
    /* take the average of the individual estimates */
@@ -859,7 +859,7 @@ SCIP_RETCODE enforceSOS2(
    objest = 0.0;
    for (j = maxInd+1; j < nVars; ++j)
    {
-      nodeselest += SCIPcalcNodeselPriority(scip, Vars[j], 0.0);
+      nodeselest += SCIPcalcNodeselPriority(scip, Vars[j], SCIP_BRANCHDIR_DOWNWARDS, 0.0);
       objest += SCIPcalcChildEstimate(scip, Vars[j], 0.0);
    }
    /* take the average of the individual estimates */
