@@ -14,6 +14,7 @@ fixed bugs:
 performance improvements:
 - fasten propagation in cons_knapsack.c due to negated clique partitions
 - recalculating only needed partitions in cons_knapsack.c, not always both
+- calculation of node priority now also works when variable's relaxation value is equal to a bound
 
 SCIP version 2.0.1
 ===============
